<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aPrzewodnik Turystyczny</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="btn_mapa">Mapa</string>
    <string name="pompeczka_okresbranza">Pompeczka - OkresBranza</string>
    <string name="pompeczka_budynki">Pompeczka - Budynki</string>
    <string name="pompeczka_miejsca">Pompeczka - Miejsca</string>
    <string name="pompeczka_wydarzenia">Pompeczka - Wydarzenia</string>
    <string name="btn_relacje">Relacje</string>
    <string name="btn_relacje_x">Relacje - X</string>
    <string name="btn_count_all">Zlicz tabele</string>
    <string name="btn_czysc_okresy">Czyść Okresy</string>
    <string name="btn_czysc_branze">Czyść Branże</string>
    <string name="btn_czysc_budynki">Czyść Budynki</string>
    <string name="btn_czysc_wsio">Czyść Wsio</string>
    <string name="demo_str">Test_Pindolino</string>
    <string name="content_desc1">symbol obiektu</string>
    <string name="et_podaj_adres">Wprowadź adres</string>
    <string name="btn_znajdz">Znajdź</string>
    <string name="btn_namierz_budynki">Namierz Budynki</string>
    <string name="btn_namierz_miejsca">Namierz Miejsca</string>
    <string name="btn_select_all">Select All</string>
    <string name="btn_init">Inicjuj bazę</string>
    <string name="btn_testuj">Testuj</string>
    <string name="ab_czerwony">Czerwony</string>
    <string name="ab_niebieski">Niebieski</string>
    <string name="ab_zielony">Zielony</string>
    <string name="lbl_dialog_pole1">Adres:</string>
    <string name="lbl_dialog_pole2">Projektant:</string>
    <string name="lbl_dialog_pole3">Data powstania:</string>
    <string name="lbl_dialog_pole4">Rodzaj: </string>
    <string name="lbl_dialog_pole5">Pole:</string>
    <string name="lbl_dialog_opis">Opis:</string>
    <string name="title_activity_lista_exp">ListaExp</string>
    <string name="title_activity_wyszukiwanie">Wyszukiwanie</string>
    <string name="lbl_wybierz_kategorie">Wybierz zakres poszukiwań:</string>
    <string name="lbl_wybierz_szczegol">Z poniższej listy wybierz interesujący Cię obiekt:</string>
    <string name="btn_przejdz_do_zwiedzania">Przejdź do Zwiedzania</string>
    <string name="btn_pokaz_na_mapie">Pokaż na mapie</string>
    <string name="lbl_mobilny_przewodnik">Mobilny Przewodnik Miejski</string>

</resources>
