<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="blake.przewodnikturystyczny.activity.Wyszukiwanie" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_wybierz_kategorie" />

    <ListView
        android:id="@+id/kategorieLista"
        style="@style/lista_kategorie" 
        android:layout_weight="0.2"/>

	<TextView
	    android:id="@+id/lbl_wybierz_szczegol"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_wybierz_szczegol"
	    android:visibility="gone" />

    <ListView
        android:id="@+id/szczegolyLista"
        style="@style/lista_kategorie"
        android:layout_weight="0.8"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_przejdz_do_zwiedzania"
        style="@style/button_brzydki"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/btn_przejdz_do_zwiedzania" />

</LinearLayout>